--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
 
     <body>
 
-        <div class="cardquestion-inp">
-            Project name
+        <div class="card cardquestion-inp">
+            <p>Project name</p>
             <input type="text" placeholder="Type something...">
         </div>
 
-        <div class="cardquestion-inp">
-            What is the result that you want to achieve with this project?
+        <div class="card cardquestion-inp">
+            <p>What is the result that you want to achieve with this project?</p>
             <input type="text" placeholder="Type something...">
         </div>
 
-        <div class="cardquestion-inp">
-            References links
+        <div class="card cardquestion-inp">
+            <p>References links</p>
             <input type="text" placeholder="Type something...">
         </div>
 
-        <div class="cardquestion-inp">
-            What do you like in these examples
+        <div class="card cardquestion-inp">
+            <p>What do you like in these examples</p>
             <input type="text" placeholder="Type something...">
         </div>
 
-        <div class="cardquestion-inp">
-            What don't you like in these examples
+        <div class="card cardquestion-inp">
+            <p>What don't you like in these examples</p>
             <input type="text" placeholder="Type something...">
         </div>
 
-        <div class="cardquestion-switch">
-            Please select one or more of the following that best describes your project
+        <div class="card cardquestion-switch">
+            <p>Please select one or more of the following that best describes your project</p>
             <div>
                 Mobile App
             </div>
@@ -58,13 +58,13 @@
             </div>
         </div>
 
-        <div class="cardquestion-upload">
-            Files
+        <div class="card cardquestion-upload">
+            <p>Files</p>
             <input type="file" placeholder="File">
         </div>
 
-        <div class="cardquestion-select">
-            What is your budget range for the project?
+        <div class="card cardquestion-select">
+            <p>What is your budget range for the project?</p>
             <select name="price">
                 <option value="s255">$2500 - $5000</option>
                 <option value="s510">$5000 - $10000</option>
