--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
             <input type="file" placeholder="File">
         </div>
 
+        <div class="card cardquestion-area">
+            <p>Project info (Including URLs)</p>
+            <textarea placeholder="Type something..." rows="4"></textarea>
+        </div>
+
+        <div class="card cardquestion-select">
+            <p>Do you need design?</p>
+            <select name="price">
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+            </select>
+        </div>
+
         <div class="card cardquestion-select">
             <p>What is your budget range for the project?</p>
             <select name="price">
