--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="main.css">
         <title>Swiftle Bot</title>
         <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+        <script>
+            if(!window.Telegram.WebApp.isExpanded) window.Telegram.WebApp.expand();
+        </script>
     </head>
 
     <body>
@@ -88,7 +92,6 @@
     </body>
 
     <script>
-        if(!window.Telegram.WebApp.isExpanded) window.Telegram.WebApp.expand();
         window.Telegram.WebApp.MainButton.text = 'Create project!';
         window.Telegram.WebApp.MainButton.show();
     </script>
