--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
             data["files"] = filedata;
              */
             console.log(data);
-            let telegram_id = 0;
+            let telegram_id = JSON.parse(new URLSearchParams(window.Telegram.WebApp.initData).get('user')).id;
             let email = document.getElementById("email").value;
-            send_post("https://api.swiftle.io/createProject?telegram_id=")
+            console.log(telegram_id, email);
+            send_post("https://api.swiftle.io/createProject?telegram_id="+telegram_id.toString()+"&email="+email, data);
         };
 
         // window.Telegram.WebApp.MainButton.click(() => {
