--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             xhr.send(json);
         };
 
-        document.getElementById("test").onclick = () => {
+        window.Telegram.WebApp.MainButton.click(() => {
             let data = {
                 "project_name": document.getElementById("project_name").value,
                 "describe": document.getElementById("describe").value,
@@ -161,16 +161,13 @@
             }
             data["files"] = filedata;
              */
+
             console.log(data);
             let telegram_id = JSON.parse(new URLSearchParams(window.Telegram.WebApp.initData).get('user')).id;
             let email = document.getElementById("email").value;
             console.log(telegram_id, email);
             send_post("https://api.swiftle.io/createProject?telegram_id="+telegram_id.toString()+"&email="+email, data);
-        };
-
-        // window.Telegram.WebApp.MainButton.click(() => {
-        //    console.log(following);
-        //});
+        });
 
     </script>
 
