--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             xhr.send(json);
         };
 
-        window.Telegram.WebApp.MainButton.click = () => {
+        window.Telegram.WebApp.MainButton.onClick(() => {
             let data = {
                 "project_name": document.getElementById("project_name").value,
                 "describe": document.getElementById("describe").value,
@@ -163,7 +163,7 @@
             let email = document.getElementById("email").value;
             console.log(telegram_id, email);
             send_post("https://api.swiftle.iotest/createProject?telegram_id="+telegram_id.toString()+"&email="+email, data);
-        };
+        });
 
     </script>
 
