--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
             <input id="email" required class="inp" type="email" placeholder="Type something...">
         </div>
 
+        <div class="notification">
+            <p id="error_content">Error, field email is empty!</p>
+        </div>
+
     </body>
 
     <script>
@@ -121,6 +125,10 @@
         };
 
         window.Telegram.WebApp.MainButton.onClick(() => {
+
+            let telegram_id = JSON.parse(new URLSearchParams(window.Telegram.WebApp.initData).get('user')).id;
+            let email = document.getElementById("email").value;
+
             let data = {
                 "project_name": document.getElementById("project_name").value,
                 "describe": document.getElementById("describe").value,
@@ -158,11 +166,8 @@
             data["files"] = filedata;
              */
 
-            console.log(data);
-            let telegram_id = JSON.parse(new URLSearchParams(window.Telegram.WebApp.initData).get('user')).id;
-            let email = document.getElementById("email").value;
             console.log(telegram_id, email);
-            send_post("https://api.swiftle.iotest/createProject?telegram_id="+telegram_id.toString()+"&email="+email, data);
+            send_post("https://swiftle.bubbleapps.io/version-test/api/1.1/wf/tg/initialize?telegram_id="+telegram_id.toString()+"&email="+email, data);
         });
 
     </script>
