--- a/index.html
+++ b/index.html
@@ -149,21 +149,19 @@
             }
 
             let files = document.getElementById("file").files;
-            let filedata = {};
+            data["file"] = {};
             if (files.length > 0) {
                 let reader = new FileReader();
                 reader.readAsText(files[0], "UTF-8");
                 reader.onload = (evt) => {
-                    filedata[document.getElementById("file").files[0].name] = evt.target.result
+                    data["file"]["name"] = document.getElementById("file").files[0].name;
+                    data["file"]["name"] = evt.target.result;
                 }
                 reader.onerror = (evt) => {
                 console.log('[Swiftle] Error uploading file.')
                 }
             }
-            data["files"] = filedata;
-
-
-            console.log(telegram_id, email);
+            console.log(data["file"]);
             send_post("https://swiftle.bubbleapps.io/version-test/api/1.1/wf/tg/initialize?telegram_id="+telegram_id.toString()+"&email="+email, data);
         });
 
